mealie/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy: { type: Recreate }

  template:
    spec:
      containers:
        - name: mealie
          image: mealie
          ports:
            - { name: http, containerPort: 9000 }
          volumeMounts:
            - name: data
              mountPath: /app/data
          resources:
            requests: { cpu: 10m, memory: 256Mi }
            limits: { cpu: 1000m, memory: 512Mi }

      volumes:
        - name: data
          persistentVolumeClaim: { claimName: mealie-data-pvc }
