mealie/ingress.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
spec:
  parentRefs: [{ name: traefik-gateway, namespace: traefik }]
  hostnames: [mange.mon.enorme.uk]
  rules:
    - backendRefs:
       - name: mealie
         port: 9000
